...
    ) {
        val write: @Composable () -> Unit = {
            ComposeFabHalf(
                icon = R.drawable.ic_tabler_plus,
                description = "書いて追加",
                onClick = onWrite,
                modifier = Modifier.testTag("open-capture-action"),
            )
        }
        val speak: @Composable () -> Unit = {
            ComposeFabHalf(
                icon = R.drawable.ic_tabler_microphone,
                description = "話して追加",
                onClick = onSpeak,
                modifier = Modifier.testTag("open-voice-capture-action"),
            )
        }
        val divider: @Composable () -> Unit = {
            Box(
                Modifier
                    .then(if (vertical) Modifier.size(width = 32.dp, height = 1.dp) else Modifier.size(width = 1.dp, height = 32.dp))
...
